Hello-world/Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: hello-world
  namespace: hello-world-ns
  labels:
    app.kubernetes.io/instance: dcase-notification
spec:
  ipFamilies:
    - IPv4
  ports:
    - name: hello-world
      protocol: TCP
      port: 8080
      targetPort: 8080
  internalTrafficPolicy: Cluster
  type: ClusterIP
  ipFamilyPolicy: SingleStack
  sessionAffinity: None
  selector:
    app: hello-world
