Hello-world/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: hello-world-ns
spec:
  rules:
    - host: your_domain.com
      http:
        paths:
          - pathType: Prefix
            path: /hello
            backend:
              service:
                name: hello-world-service
                port:
                  number: 80
